2012-01-05  Ingo Renner  <ingo.renner@dkd.de>

	* ! Changed minimum required TYPO3 version to TYPO3 4.5

2012-02-03  Ingo Renner  <ingo.renner@dkd.de>

	* Updated solrconfig.xml to use Lucene 3.5

2012-02-03  Olivier Dobberkau  <olivier.dobberkau@dkd.de>

	* Changed Apache Solr Version to 3.5 in install.sh

2011-12-13  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Changed rendering of facet values to only split by the first ":" to allow the use of colons

2011-12-09  Ingo Renner  <ingo.renner@dkd.de>

	* Changed install script to load Tomcat v6.0.35

2011-11-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added an option override the URL stored in the index for a page

2011-10-06  Ingo Renner  <ingo.renner@dkd.de>

	* !!! Removed frontend indexing support (and thus also EXT:crawler support)

	* !! Changed TypoScript option for result highlighting. tx_solr.search.highlighting has been moved to tx_solr.search.results.resultsHighlighting to be consistent with tx_solr.search.results.siteHighlighting. Usage of the old TS path is now deprecated and will be removed with the next minor release (v2.1 / v2.6-EAP) Resolves issue #29284, credits Stefan Sprenger
	* !! Changed schema fields, enabling termVectors on some text fields for better performance in use with MorLikeThis and Highlighting
	* !! Changed schema field author from text to string

	* ! Changed search.faceting.showEmptyFacets to 0 by default
	* ! Changed initialization of the Index Queue to be site specific

	* Deprecated method tx_solr_Query::setReturnFields(), use tx_solr_Query::setFieldList() instead

	* Fixed Solr install script to load the current Tomcat version (6.0.33)
	* Fixed initialization of Index Queue for records which are available in all languages, those were not includeded before
	* Added a feature to render a specific facet although it doesn't provide any options and although rendering empty facets has beeen turned off globally, credits Rolf Hofmann